--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "era-date"
+name = "era_date"
 version = "0.1.0"
 edition = "2021"
+authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
+repository = "https://github.com/magnusmanske/era-date"
+description = "A crate to generate text descriptions for date precisions, from day (ISO) to millennium"
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
 time = "*"
